2005-09-28  Phil Muldoon  <pmuldoon@redhat.com>

	* EventLogger.java (EventFileHandler): Added.
	(AttachedContinueObserver): swagiaal patch
	(DetachedContinueObserver): swagiaal patch
	* ActionPool.java: Actually instantiate eventLog.	
	(Attach.execute): Change method of attaching.
	Changed method of adding observers.

2005-09-27  Phil Muldoon  <pmuldoon@redhat.com>

	* ActionPool.java (execute): Added eventLog observer.
	* EventLogger.java (EventLogger): Added.
	

2005-09-27  Andrew Cagney  <cagney@redhat.com>

	* ProcDataModel.java: Instead of frysk .proc .Manager
	.procRemoved, use frysk .proc .Host .observableProcRemoved.

	* ActionPool.java, LogWindow.java, ProcDataModel.java: : Instead
	of frysk .proc .Manager .procDiscovered, use frysk .proc .Host
	.observableProcAdded.
	
	* ActionPool.java, ProcDataModel.java: Use observableTaskRemoved,
	instead of taskRemoved.

2005-09-23  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcDataModel.java: Removed calls to refilter.
	* NotifyingLabel.java (NotifyingLabel): Removed call buggy to ExposeEvent.
	* GuiData.java (GuiData): refactored setStatusWidget to setInfoWidget.
	* AllProcWidget.java (selectionChangedEvent): StatusWidget -> InfoWidget.

2005-09-22  Sami Wagiaalla  <swagiaal@redhat.com>

	* AllProcWidget.java : Clicking a column now changes the search column to the one
	clicked. this feature is still a little laggy improvements comming soon.
	* StatusWidget.java (initAttacheObserversTreeView): Added remove observer code

2005-09-21  Sami Wagiaalla  <swagiaal@redhat.com>

	* NotifyingLabel.java: new file: a lable that changes color when the object it is 
	observing calls update, and resets color when it is selected.
	* InfoWidget.java (InfoWidget): new file: provies a NoteBook which statusWidget is
	the first page of.
	* AllProcWidget.java: Changed to using infoWidget instead of statusWidget
	* GuiObservable.java (notifyObservers): new file: GuiObserver automatically sets