@@ -133,15 +133,10 @@ public class ActionPool {
                 public void execute(ProcData data) {
                         System.out.println("sending Manager.host.requestAttachProc");
                         data.getProc().observableAttachedContinue
-                                        .addObserver(WindowManager.theManager.logWindow);
+                                        .addObserver(WindowManager.theManager.logWindow.attachedContinueObserver);
                         data.getProc().observableAttachedContinue.addObserver(eventLog.attachedContinueObserver);
                         data.getProc().requestAttachedContinue();
-//                      Manager.host.observableProcAdded.addObserver
-//                          (WindowManager.theManager.logWindow);       
-//                      System.out.println("About to: " + data.getProc().toString());
-//                      Manager.host.observableProcAdded.addObserver(eventLog);
-//                      System.out.println("Get proc returns: " + Manager.host.getProc(data.getProc().getId()));
-//                      Manager.host.requestAttachProc(data.getProc().getId());
+
                 }
 
                 /**
@@ -153,27 +148,28 @@ public class ActionPool {
         }
 
         public class Detach extends Action {
-                
-                public Detach() {
-                        this.name = "Detach";
-                        this.toolTip = "Dettach from an attached process";
-                }
 
-                public void execute(final ProcData data) {
-                Manager.host.observableProcRemoved.addObserver
-                    (WindowManager.theManager.logWindow);                       
-                Manager.host.observableProcRemoved.addObserver
-            (eventLog.detachedContinueObserver);
-                        data.getProc().requestDetachedContinue();
-                }
-
-                /**
-                 * This Action does not apply to Tasks.
-                 * */
-                public void execute(TaskData data) {
-                        
-                }
-        }
+			public Detach() {
+				this.name = "Detach";
+				this.toolTip = "Dettach from an attached process";
+			}
+	
+			public void execute(final ProcData data) {
+	
+				Manager.host.observableProcRemoved
+						.addObserver(WindowManager.theManager.logWindow.detachedContinueObserver);
+				Manager.host.observableProcRemoved
+						.addObserver(eventLog.detachedContinueObserver);
+				data.getProc().requestDetachedContinue();
+			}
+	
+			/**
+			 * This Action does not apply to Tasks.
+			 */
+			public void execute(TaskData data) {
+	
+			}
+	}
 
         public class Stop extends Action {
                 
